[tool.poetry]
name = "thompson-sampling"
version = "0.1.0"
description = "Thompson Sampling for scheduling in dynamic environments."
authors = ["Mehmet Aktas <mfatihaktas@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
simpy = "^4.0.1"
numpy = "^1.23.5"
black = "^22.10.0"
flake8 = "^6.0.0"
matplotlib = "^3.6.2"
joblib = "^1.2.0"
scipy = "^1.9.3"
snakeviz = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]
exclude = '''
/(
    \.git
  | \.venv
  | \.direnv
  | _build
  | build
  | dist
  | \.env
  | \.vscode
  | \.cache
  | github
  | __pycache__
  | .cloudignore
)/
'''

[tool.flake8]
max-line-length = 100
max-complexity = 18
docstring-convention = "google"
select = ["A", "B", "C", "D", "E", "F", "W"]
ignore = ["B950", "D1", "E203", "E221", "E501", "W503", "E231"]
per-file-ignores = [
    "__init__.py : F401",
]
exclude = [
    # No need to traverse our git dirs
    ".git", ".github",
    # No value in checking cache dirs
    "__pycache__",
    # No need to check virtualenvs
    ".env", ".venv", ".direnv",
]

[tool.pytest.ini_options]
minversion = "6.1"
log_cli = true
log_cli_level = "INFO" # "DEBUG"
log_cli_format = "%(levelname)s] %(file_name)s:%(line_number)s - %(func_name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = [
    "tests",
]
